通过代码生成一