@@ -2,45 +2,18 @@ package llvm;
 
 import common.TokenType;
 import frontend.Token;
-import llvm.types.FunctionType;
-import llvm.types.IntegerType;
-import llvm.types.Type;
-import llvm.types.VoidType;
+import llvm.types.*;
 import llvm.values.Arguement;
 import llvm.values.BasicBlock;
 import llvm.values.Instruction;
 import llvm.values.Value;
 import llvm.values.constants.Function;
+import llvm.values.constants.GlobalArray;
 import llvm.values.constants.GlobalVar;
+import llvm.values.constants.IntConst;
 import llvm.values.instructions.AllocaInst;
 import llvm.values.instructions.Operator;
-import syntaxNode.AddExp;
-import syntaxNode.Block;
-import syntaxNode.BlockItem;
-import syntaxNode.CompUnit;
-import syntaxNode.Cond;
-import syntaxNode.ConstDecl;
-import syntaxNode.ConstDef;
-import syntaxNode.ConstExp;
-import syntaxNode.ConstInitVal;
-import syntaxNode.Decl;
-import syntaxNode.EqExp;
-import syntaxNode.Exp;
-import syntaxNode.FuncDef;
-import syntaxNode.FuncFParam;
-import syntaxNode.FuncFParams;
-import syntaxNode.InitVal;
-import syntaxNode.LAndExp;
-import syntaxNode.LOrExp;
-import syntaxNode.LVal;
-import syntaxNode.MainFuncDef;
-import syntaxNode.MulExp;
-import syntaxNode.PrimaryExp;
-import syntaxNode.RelExp;
-import syntaxNode.Stmt;
-import syntaxNode.UnaryExp;
-import syntaxNode.VarDecl;
-import syntaxNode.VarDef;
+import syntaxNode.*;
 import util.ValueFactory;
 
 import java.util.ArrayList;
@@ -79,6 +52,10 @@ public class LLVMGenerator {
 
     private BasicBlock ifFalseBlock;
 
+    private BasicBlock nowForLoopEnd;
+
+    private BasicBlock afterForBlock;
+
     private Function currentFunction;
 
     private Boolean isGlobal;
@@ -96,8 +73,8 @@ public class LLVMGenerator {
     }
 
     public void init() {
-        isConst = true;
         isGlobal = true;
+        isConst = false;
         valueStack = new Stack<>();
         symbolTables = new ArrayList<>();
         currentSymbolTable = new LLVMSymbolTable(index++, null);
@@ -126,7 +103,6 @@ public class LLVMGenerator {
         }
 
         isGlobal = false;
-        isConst = false;
 
         for (FuncDef funcDef : compUnit.getFuncDefs()) {
             gFuncDef(funcDef);
@@ -165,10 +141,10 @@ public class LLVMGenerator {
                     value.setType(currentType);
                 }
                 GlobalVar globalVar = ValueFactory.buildGlobalVar(name, currentType, isConst, value);
-                irModule.addGlobalVar(globalVar);
+                irModule.addGlobalValue(globalVar);
                 currentSymbolTable.put(name, globalVar);
             } else {
-                Instruction inst = ValueFactory.buildAllocaInst(currentBlock, isConst, currentType);
+                Instruction inst = ValueFactory.buildAllocaInst(currentBlock, currentType);
                 currentSymbolTable.put(name, inst);
                 if (value != null) {
                     if (currentType != value.getType()) {
@@ -176,6 +152,76 @@ public class LLVMGenerator {
                     }
                     ValueFactory.buildStoreInst(currentBlock, value, inst);
                 }
+            }
+        } else {
+            if (isGlobal) {
+                gConstExp(constDef.getConstExp());
+                Value capacityValue = valueStack.pop();
+                int capacity = Integer.parseInt(capacityValue.getName());
+                GlobalArray globalArray = ValueFactory.buildGlobalArray(name, isConst, capacity, currentType);
+                if (constDef.getConstInitVal().getStringConst() == null) {
+                    for (int i = 0; i < constDef.getConstInitVal().getConstExps().size(); i++) {
+                        gConstExp(constDef.getConstInitVal().getConstExps().get(i));
+                        Value element = valueStack.pop();
+                        globalArray.addElement(element);
+                    }
+                    for (int i = constDef.getConstInitVal().getConstExps().size(); i < capacity; i++) {
+                        IntConst zero = ValueFactory.buildIntConst(0, false);
+                        globalArray.addElement(zero);
+                    }
+                } else {
+                    String str = constDef.getConstInitVal().getStringConst().getContent();
+                    for (int i = 1; i < str.length() - 1; i++) {
+                        int value = str.charAt(i);
+                        IntConst element = ValueFactory.buildIntConst(value, true);
+                        globalArray.addElement(element);
+                    }
+                    for (int i = str.length() - 2; i < capacity; i++) {
+                        IntConst zero = ValueFactory.buildIntConst(0, true);
+                        globalArray.addElement(zero);
+                    }
+                }
+                irModule.addGlobalValue(globalArray);
+                currentSymbolTable.put(name, globalArray);
+            } else {
+                gConstExp(constDef.getConstExp());
+                Value capacityValue = valueStack.pop();
+                int capacity = Integer.parseInt(capacityValue.getName());
+                ArrayType arrayType = new ArrayType(currentType, capacity);
+                Value array = ValueFactory.buildAllocaInst(currentBlock, arrayType);
+                if (constDef.getConstInitVal().getStringConst() == null) {
+                    for (int i = 0; i < constDef.getConstInitVal().getConstExps().size(); i++) {
+                        gConstExp(constDef.getConstInitVal().getConstExps().get(i));
+                        Value element = valueStack.pop();
+                        Instruction inst = ValueFactory.buildGepInst(currentBlock, array, element);
+                        ValueFactory.buildStoreInst(currentBlock, element, inst);
+                        valueStack.add(inst);
+                    }
+                    for (int i = constDef.getConstInitVal().getConstExps().size(); i < capacity; i++) {
+                        IntConst zero = ValueFactory.buildIntConst(0, false);
+                        Instruction inst = ValueFactory.buildGepInst(currentBlock, array, zero);
+                        ValueFactory.buildStoreInst(currentBlock, zero, inst);
+                        valueStack.add(inst);
+                    }
+                } else {
+                    String str = constDef.getConstInitVal().getStringConst().getContent();
+                    str = str.substring(1, str.length() - 1);
+                    for (int i = 0; i < str.length(); i++) {
+                        IntConst element = ValueFactory.buildIntConst(str.charAt(i), true);
+                        Value offset = ValueFactory.buildIntConst(i, false);
+                        Instruction inst = ValueFactory.buildGepInst(currentBlock, array, offset);
+                        ValueFactory.buildStoreInst(currentBlock, element, inst);
+                        valueStack.add(inst);
+                    }
+                    for (int i = str.length(); i < capacity; i++) {
+                        IntConst zero = ValueFactory.buildIntConst(0, false);
+                        Value offset = ValueFactory.buildIntConst(i, false);
+                        Instruction inst = ValueFactory.buildGepInst(currentBlock, array, offset);
+                        ValueFactory.buildStoreInst(currentBlock, zero, inst);
+                        valueStack.add(inst);
+                    }
+                }
+                currentSymbolTable.put(name, array);
             }
         }
     }
@@ -187,7 +233,7 @@ public class LLVMGenerator {
                 gConstExp(constExp);
             }
         } else {
-            // StringConst
+            // StringConst 的在数组部分处理
         }
     }
 
@@ -209,17 +255,17 @@ public class LLVMGenerator {
         String name = varDef.getIdent().getContent();
         if (varDef.getDimension() == 0) {
             if (isGlobal) {
-                Value value = null;
+                Value value = ValueFactory.buildIntConst(0, false);
                 if (varDef.getInitVal() != null) {
                     gInitVal(varDef.getInitVal());
                     value = valueStack.pop();
                     value.setType(currentType);
                 }
                 GlobalVar globalVar = ValueFactory.buildGlobalVar(name, currentType, isConst, value);
-                irModule.addGlobalVar(globalVar);
+                irModule.addGlobalValue(globalVar);
                 currentSymbolTable.put(name, globalVar);
             } else {
-                Instruction inst = ValueFactory.buildAllocaInst(currentBlock, isConst, currentType);
+                Instruction inst = ValueFactory.buildAllocaInst(currentBlock, currentType);
                 currentSymbolTable.put(name, inst);
                 if (varDef.getInitVal() != null) {
                     gInitVal(varDef.getInitVal());
@@ -229,6 +275,87 @@ public class LLVMGenerator {
                     }
                     ValueFactory.buildStoreInst(currentBlock, value, inst);
                 }
+            }
+        } else {
+            if (isGlobal) {
+                gConstExp(varDef.getConstExp());
+                Value capacityValue = valueStack.pop();
+                int capacity = Integer.parseInt(capacityValue.getName());
+                GlobalArray globalArray = ValueFactory.buildGlobalArray(name, isConst, capacity, currentType);
+                if (varDef.getInitVal() != null && varDef.getInitVal().getStringConst() == null) {
+                    for (int i = 0; i < varDef.getInitVal().getExps().size(); i++) {
+                        gExp(varDef.getInitVal().getExps().get(i));
+                        Value element = valueStack.pop();
+                        globalArray.addElement(element);
+                    }
+                    for (int i = varDef.getInitVal().getExps().size(); i < capacity; i++) {
+                        IntConst zero = ValueFactory.buildIntConst(0, false);
+                        globalArray.addElement(zero);
+                    }
+                } else if (varDef.getInitVal() != null && varDef.getInitVal().getStringConst() != null) {
+                    String str = varDef.getInitVal().getStringConst().getContent();
+                    for (int i = 1; i < str.length() - 1; i++) {
+                        int value = str.charAt(i);
+                        IntConst element = ValueFactory.buildIntConst(value, true);
+                        globalArray.addElement(element);
+                    }
+                    for (int i = str.length() - 2; i < capacity; i++) {
+                        IntConst zero = ValueFactory.buildIntConst(0, true);
+                        globalArray.addElement(zero);
+                    }
+                } else {
+                    Boolean isChar = currentType == IntegerType.I8;
+                    for (int i = 0; i < capacity; i++) {
+                        IntConst zero = ValueFactory.buildIntConst(0, isChar);
+                        globalArray.addElement(zero);
+                    }
+                }
+                irModule.addGlobalValue(globalArray);
+                currentSymbolTable.put(name, globalArray);
+            } else {
+                gConstExp(varDef.getConstExp());
+                Value capacityValue = valueStack.pop();
+                int capacity = Integer.parseInt(capacityValue.getName());
+                ArrayType arrayType = new ArrayType(currentType, capacity);
+                Value array = ValueFactory.buildAllocaInst(currentBlock, arrayType);
+                if (varDef.getInitVal() != null) {
+                    if (varDef.getInitVal().getStringConst() == null) {
+                        for (int i = 0; i < varDef.getInitVal().getExps().size(); i++) {
+                            gExp(varDef.getInitVal().getExps().get(i));
+                            Value element = valueStack.pop();
+                            if (currentType == IntegerType.I8 && element.getType() == IntegerType.I32) {
+                                element = ValueFactory.buildConvInst(currentBlock, element);
+                            }
+                            Value offset = ValueFactory.buildIntConst(i, false);
+                            Instruction inst = ValueFactory.buildGepInst(currentBlock, array, offset);
+                            ValueFactory.buildStoreInst(currentBlock, element, inst);
+                            valueStack.add(inst);
+                        }
+                        for (int i = varDef.getInitVal().getExps().size(); i < capacity; i++) {
+                            IntConst zero = ValueFactory.buildIntConst(0, false);
+                            Instruction inst = ValueFactory.buildGepInst(currentBlock, array, zero);
+                            ValueFactory.buildStoreInst(currentBlock, zero, inst);
+                            valueStack.add(inst);
+                        }
+                    } else {
+                        String str = varDef.getInitVal().getStringConst().getContent();
+                        str = str.substring(1, str.length() - 1);
+                        for (int i = 0; i < str.length(); i++) {
+                            IntConst element = ValueFactory.buildIntConst(str.charAt(i), true);
+                            Value offset = ValueFactory.buildIntConst(i, false);
+                            Instruction inst = ValueFactory.buildGepInst(currentBlock, array, offset);
+                            ValueFactory.buildStoreInst(currentBlock, element, inst);
+                            valueStack.add(inst);
+                        }
+                        for (int i = str.length(); i < capacity; i++) {
+                            IntConst zero = ValueFactory.buildIntConst(0, false);
+                            Instruction inst = ValueFactory.buildGepInst(currentBlock, array, zero);
+                            ValueFactory.buildStoreInst(currentBlock, zero, inst);
+                            valueStack.add(inst);
+                        }
+                    }
+                }
+                currentSymbolTable.put(name, array);
             }
         }
     }
@@ -259,7 +386,7 @@ public class LLVMGenerator {
 
         currentFunction = new Function(funcDef.getIdent().getContent(), functionType, false);
         irModule.addFunction(currentFunction);
-        symbolTables.getFirst().put(funcDef.getIdent().getContent(), currentFunction);
+        symbolTables.get(0).put(funcDef.getIdent().getContent(), currentFunction);
 
         currentBlock = ValueFactory.buildBasicBlock("block");
         currentFunction.addBlock(currentBlock);
@@ -267,7 +394,7 @@ public class LLVMGenerator {
         for (int i= 0; i < args.size(); i++) {
             Arguement arguement = args.get(i);
             String name = funcDef.getFuncFParams().getFuncFParams().get(i).getIdent().getContent();
-            AllocaInst inst = ValueFactory.buildAllocaInst(currentBlock, false, arguement.getType());
+            AllocaInst inst = ValueFactory.buildAllocaInst(currentBlock, arguement.getType());
             ValueFactory.buildStoreInst(currentBlock, arguement, inst);
             currentSymbolTable.put(name, inst);
         }
@@ -291,6 +418,9 @@ public class LLVMGenerator {
     public void gFuncFParam(FuncFParam funcFParam, List<Type> paramTypes, List<Arguement> args, int index) {
         // FuncFParam → BType Ident ['[' ']']
         Type type = funcFParam.getBType().getToken().getType() == TokenType.INTTK ? IntegerType.I32 : IntegerType.I8;
+        if (funcFParam.getDimension() == 1) {
+            type = new PointerType(type);
+        }
         paramTypes.add(type);
         Arguement arguement = ValueFactory.buildArguement(type, index);
         args.add(arguement);
@@ -305,7 +435,7 @@ public class LLVMGenerator {
 
         currentFunction = new Function("main", new FunctionType(IntegerType.I32, new ArrayList<>()), false);
         irModule.addFunction(currentFunction);
-        symbolTables.getFirst().put("main", currentFunction);
+        symbolTables.get(0).put("main", currentFunction);
 
         currentBlock = ValueFactory.buildBasicBlock("mainBlock");
         currentFunction.addBlock(currentBlock);
@@ -345,26 +475,28 @@ public class LLVMGenerator {
             | 'printf''('StringConst {','Exp}')'';'
 */
         if (stmt.getType() == LValAssignExp ) {
-            LVal lVal = stmt.getLVal();
-            Exp exp = stmt.getExps().getFirst();
-            gExp(exp);
+            gLVal(stmt.getLVal());
+            Value addr = valueStack.pop();
+            gExp(stmt.getExps().get(0));
             Value value = valueStack.pop();
-            Value addr = getValue(lVal.getIdent().getContent());
             if (value.getType() != addr.getType()) {
                 value = ValueFactory.buildConvInst(currentBlock, value);
             }
             ValueFactory.buildStoreInst(currentBlock, value, addr);
         } else if (stmt.getType() == Exp) {
             if (!stmt.getExps().isEmpty()) {
-                gExp(stmt.getExps().getFirst());
+                gExp(stmt.getExps().get(0));
                 valueStack.pop();
             }
         } else if (stmt.getType() == Return) {
             Value value = null;
             if (!stmt.getExps().isEmpty()) {
                 valueStack.clear();
-                gExp(stmt.getExps().getFirst());
+                gExp(stmt.getExps().get(0));
                 value = valueStack.pop();
+                if (value.getType() != currentFunction.getReturnType()) {
+                    value = ValueFactory.buildConvInst(currentBlock, value);
+                }
             }
             ValueFactory.buildRetInst(currentBlock, value);
         } else if (stmt.getType() == Block) {
@@ -413,9 +545,59 @@ public class LLVMGenerator {
                 currentBlock = recordIfFalseBlock;
             }
         } else if (stmt.getType() == For) {
+            BasicBlock condLoopStart = ValueFactory.buildBasicBlock("condLoopStart");
+            BasicBlock recordNowForBlock = ValueFactory.buildBasicBlock("forLoop");
+            afterForBlock = ValueFactory.buildBasicBlock("afterFor");
+            BasicBlock recordAfterForBlock = afterForBlock;
+            BasicBlock condLoopEnd = ValueFactory.buildBasicBlock("condLoopEnd");
+            nowForLoopEnd = condLoopEnd;
 
+            ValueFactory.buildBrInst(currentBlock, condLoopStart);
+            // 初始表达式
+            condLoopStart.setLabelRegNum(currentBlock.getRegNum());
+            currentFunction.addBlock(condLoopStart);
+            currentBlock = condLoopStart;
+            if (stmt.getForStmt1() != null) {
+                gForStmt(stmt.getForStmt1());
+            }
+            ifTrueBlock = recordNowForBlock;
+            ifFalseBlock = recordAfterForBlock;
+            if (stmt.getCond() != null) {
+                gCond(stmt.getCond());
+            } else {
+                ValueFactory.buildBrInst(currentBlock, recordNowForBlock);
+            }
+
+            // 循环体
+            recordNowForBlock.setLabelRegNum(currentBlock.getRegNum());
+            currentFunction.addBlock(recordNowForBlock);
+            currentBlock = recordNowForBlock;
+            gStmt(stmt.getStmt());
+            ValueFactory.buildBrInst(currentBlock, condLoopEnd);
+
+            condLoopEnd.setLabelRegNum(currentBlock.getRegNum());
+            currentFunction.addBlock(condLoopEnd);
+            currentBlock = condLoopEnd;
+            if (stmt.getForStmt2() != null) {
+                gForStmt(stmt.getForStmt2());
+            }
+            ifTrueBlock = recordNowForBlock;
+            ifFalseBlock = recordAfterForBlock;
+            if (stmt.getCond() != null) {
+                gCond(stmt.getCond());
+            } else {
+                ValueFactory.buildBrInst(currentBlock, recordNowForBlock);
+            }
+
+            recordAfterForBlock.setLabelRegNum(currentBlock.getRegNum());
+            currentFunction.addBlock(recordAfterForBlock);
+            currentBlock = recordAfterForBlock;
         } else if (stmt.getType() == Break || stmt.getType() == Continue) {
-
+            if (stmt.getType() == Break ) {
+                ValueFactory.buildBrInst(currentBlock,afterForBlock);
+            } else {
+                ValueFactory.buildBrInst(currentBlock,nowForLoopEnd);
+            }
         } else if (stmt.getType() == LValAssignGetint) {
             LVal lVal = stmt.getLVal();
             Value addr = getValue(lVal.getIdent().getContent());
@@ -437,9 +619,7 @@ public class LLVMGenerator {
                     gExp(stmt.getExps().get(paramIndex++));
                     Value value = valueStack.pop();
                     if (value.getType() == IntegerType.I8) {
-                        Instruction inst1 = ValueFactory.buildConvInst(currentBlock, value);
-                        currentBlock.addInstruction(inst1);
-                        value = inst1;
+                        value = ValueFactory.buildConvInst(currentBlock, value);
                     }
                     params.add(value);
                     if (format.charAt(i+1) == 'd') {
@@ -449,7 +629,7 @@ public class LLVMGenerator {
                     }
                     i++;
                 } else {
-                    Value value = ValueFactory.buildIntConst(String.valueOf(format.charAt(i)), true);
+                    Value value = ValueFactory.buildIntConst(format.charAt(i), false);
                     params.add(value);
                     ValueFactory.buildCallInst(currentBlock, (Function) getValue("putch"), params);
                 }
@@ -457,24 +637,36 @@ public class LLVMGenerator {
         }
     }
 
+    public void gForStmt(ForStmt forStmt) {
+        // ForStmt → LVal '=' Exp
+        LVal lVal = forStmt.getLVal();
+        Exp exp = forStmt.getExp();
+        gExp(exp);
+        Value value = valueStack.pop();
+        Value addr = getValue(lVal.getIdent().getContent());
+        if (value.getType() != addr.getType()) {
+            value = ValueFactory.buildConvInst(currentBlock, value);
+        }
+        ValueFactory.buildStoreInst(currentBlock, value, addr);
+    }
+
     public void gExp(Exp exp) {
         // Exp → AddExp
         gAddExp(exp.getAddExp());
     }
 
-
     public void gAddExp(AddExp addExp) {
         // AddExp → MulExp | AddExp ('+' | '−') MulExp
-        gMulExp(addExp.getMulExps().getFirst());
+        gMulExp(addExp.getMulExps().get(0));
         for (int i = 0; i < addExp.getOperations().size(); i++) {
             gMulExp(addExp.getMulExps().get(i+1));
             Value right = valueStack.pop();
             Value left = valueStack.pop();
-            if (isConst) {
+            if (isConst || isGlobal) {
                 int num1 = Integer.parseInt(left.getName());
                 int num2 = Integer.parseInt(right.getName());
                 int result = calculate(addExp.getOperations().get(i), num1, num2);
-                valueStack.add(ValueFactory.buildIntConst(String.valueOf(result), false));
+                valueStack.add(ValueFactory.buildIntConst(result, false));
             } else {
                 Operator op = addExp.getOperations().get(i).getType() == TokenType.PLUS ? Operator.Add : Operator.Sub;
                 Instruction inst = ValueFactory.buildBinaryInst(currentBlock, op, left, right);
@@ -485,16 +677,16 @@ public class LLVMGenerator {
 
     public void gMulExp(MulExp mulExp) {
         // MulExp → UnaryExp | MulExp ('*' | '/' | '%') UnaryExp
-        gUnaryExp(mulExp.getUnaryExps().getFirst());
+        gUnaryExp(mulExp.getUnaryExps().get(0));
         for (int i = 0; i < mulExp.getOperators().size(); i++) {
             gUnaryExp(mulExp.getUnaryExps().get(i+1));
             Value right = valueStack.pop();
             Value left = valueStack.pop();
-            if (isConst) {
+            if (isConst || isGlobal) {
                 int num1 = Integer.parseInt(left.getName());
                 int num2 = Integer.parseInt(right.getName());
                 int result = calculate(mulExp.getOperators().get(i), num1, num2);
-                valueStack.add(ValueFactory.buildIntConst(String.valueOf(result), false));
+                valueStack.add(ValueFactory.buildIntConst(result, false));
             } else {
                 Operator op = mulExp.getOperators().get(i).getType() == TokenType.MULT ? Operator.Mul :
                         mulExp.getOperators().get(i).getType() == TokenType.DIV ? Operator.Sdiv : Operator.Srem;
@@ -511,23 +703,39 @@ public class LLVMGenerator {
         } else if (unaryExp.getIdent() != null) {
             Function function = ((Function) getValue(unaryExp.getIdent().getContent()));
             ArrayList<Value> params = new ArrayList<>();
-            for (int i = 0;i < unaryExp.getFuncRParams().getExps().size(); i++) {
-                Exp exp = unaryExp.getFuncRParams().getExps().get(i);
-                gExp(exp);
-                Value value = valueStack.pop();
-                params.add(value);
-            }
+            gFuncRParams(unaryExp.getFuncRParams(), params);
             Instruction inst = ValueFactory.buildCallInst(currentBlock, function, params);
             if (function.getType() != VoidType.Void) {
                 valueStack.add(inst);
             }
         } else {
-            Operator op = unaryExp.getUnaryOp().getToken().getType() == TokenType.PLUS ? Operator.Add : Operator.Sub;
-            Value left = ValueFactory.buildIntConst("0", false);
             gUnaryExp(unaryExp.getUnaryExp());
-            Value right = valueStack.pop();
-            Instruction inst = ValueFactory.buildBinaryInst(currentBlock, op, left, right);
-            valueStack.add(inst);
+            if (isGlobal || isConst) {
+                int num = Integer.parseInt(valueStack.pop().getName());
+                int result = unaryExp.getUnaryOp().getToken().getType() == TokenType.MINU ? -num : num;
+                valueStack.add(ValueFactory.buildIntConst(result, false));
+            } else {
+                if (unaryExp.getUnaryOp().getToken().getType() == TokenType.MINU) {
+                    Value value = valueStack.pop();
+                    Value zero = ValueFactory.buildIntConst(0, false);
+                    Instruction inst = ValueFactory.buildBinaryInst(currentBlock, Operator.Sub, zero, value);
+                    valueStack.add(inst);
+                } else if (unaryExp.getUnaryOp().getToken().getType() == TokenType.NOT) {
+                    Value value = valueStack.pop();
+                    Instruction inst = ValueFactory.buildBinaryInst(currentBlock, Operator.Eq, value, ValueFactory.buildIntConst(0, false));
+                    valueStack.add(inst);
+                }
+            }
+        }
+    }
+
+    public void gFuncRParams(FuncRParams funcRParams, ArrayList<Value> params) {
+        // FuncRParams → Exp { ',' Exp }
+        for (int i = 0;i < funcRParams.getExps().size(); i++) {
+            Exp exp = funcRParams.getExps().get(i);
+            gExp(exp);
+            Value value = valueStack.pop();
+            params.add(value);
         }
     }
 
@@ -537,11 +745,15 @@ public class LLVMGenerator {
             gExp(primaryExp.getExp());
         } else if (primaryExp.getLVal() != null) {
             gLVal(primaryExp.getLVal());
+            Value inst1 = valueStack.pop();
+            Instruction inst2 = ValueFactory.buildLoadInst(currentBlock, inst1);
+            valueStack.add(inst2);
         } else if (primaryExp.getNumber() != null) {
-            valueStack.add(ValueFactory.buildIntConst(primaryExp.getNumber().getIntcon().getContent(), false));
+            int value = Integer.parseInt(primaryExp.getNumber().getIntcon().getContent());
+            valueStack.add(ValueFactory.buildIntConst(value, false));
         } else {
-            String number = primaryExp.getCharacter().getChrcon().getContent().substring(1);   // "'c'"
-            valueStack.add(ValueFactory.buildIntConst(number, true));
+            int value = primaryExp.getCharacter().getChrcon().getContent().charAt(1);    // "'c'"
+            valueStack.add(ValueFactory.buildIntConst(value, true));
         }
     }
 
@@ -594,7 +806,7 @@ public class LLVMGenerator {
 
     public void gEqExp(EqExp eqExp) {
         // EqExp → RelExp | EqExp ('==' | '!=') RelExp
-        gRelExp(eqExp.getRelExps().getFirst());
+        gRelExp(eqExp.getRelExps().get(0));
         for (int i=0; i < eqExp.getTokens().size(); i++) {
             gRelExp(eqExp.getRelExps().get(i+1));
             Value right = valueStack.pop();
@@ -607,7 +819,7 @@ public class LLVMGenerator {
 
     public void gRelExp(RelExp relExp) {
         // RelExp → AddExp | RelExp ('<' | '>' | '<=' | '>=') AddExp
-        gAddExp(relExp.getAddExps().getFirst());
+        gAddExp(relExp.getAddExps().get(0));
         for (int i=0; i < relExp.getTokens().size(); i++) {
             gAddExp(relExp.getAddExps().get(i+1));
             Value right = valueStack.pop();
@@ -629,17 +841,30 @@ public class LLVMGenerator {
 
     public void gLVal(LVal lVal) {
         // LVal → Ident ['[' Exp ']']
-        if (lVal.getDimension() == 0) {
+        if (isConst || isGlobal) {
             Value value = getValue(lVal.getIdent().getContent());
-            Instruction inst = ValueFactory.buildLoadInst(currentBlock, value);
-            valueStack.add(inst);
-        } else {
-            // Array
+            value = ValueFactory.buildIntConst(((GlobalVar) value).getVal(), false);
+            valueStack.add(value);
         }
-    }
-
-    public void gFuncRParams() {
-        // FuncRParams → Exp { ',' Exp }
+        else {
+            if (lVal.getDimension() == 0) {
+                Value value = getValue(lVal.getIdent().getContent());
+                if (value.getType() instanceof ArrayType) {
+                    value= ValueFactory.buildGepInst(currentBlock, value, ValueFactory.buildIntConst(0, false));
+                    value.setType(new PointerType(value.getType()));
+                }
+                valueStack.add(value);
+            } else {
+                gAddExp(lVal.getExp().getAddExp());
+                Value array = getValue(lVal.getIdent().getContent());
+                if (array.getType() instanceof PointerType) {
+                    array = ValueFactory.buildLoadInst(currentBlock, array);
+                }
+                Value value = valueStack.pop();
+                value = ValueFactory.buildGepInst(currentBlock, array, value);
+                valueStack.add(value);
+            }
+        }
     }
 
     public int calculate(Token token, int num1, int num2) {
